stylesheet.css
/* Universal Styles */
body {
    margin: 0rem;
    padding: 0rem;
    color: black;
}

ul {
    background-color: rgb(68, 68, 68);
    margin-top: 0em;
    padding-top: 1em;
    padding-bottom: 1em;
    padding-left: 0em;
    text-align: center;
    position: fixed;
    top: 0rem;
    width: 100%;
}

li {
    display: inline;    
}

@media only screen and (min-width: 1250px) {

    h1 {
        color: white;
        font-family: Arial, Helvetica, sans-serif;
        font-size: 4em;
        text-align: right;
        padding-top: 1rem;
        margin-right: 10rem;
    }

    h2 {
        color: white;
        font-family: Arial, Helvetica, sans-serif;
        font-size: 3em;
        text-align: right;
        margin-top: 0rem;
        margin-bottom: 0rem;
        margin-right: 10rem;
        padding: 0rem;
    }

    h3 {
        color: white;
        text-align: center;
        font-family: Arial, Helvetica, sans-serif;
        font-size: 4em;
        margin: 0em;
        padding: .5em;
    }

    li a {
        color: white;
        font-family: Arial, Helvetica, sans-serif;
        font-size: 1.2em;
        padding-left: 1em;
        padding-right: 1em;
        text-decoration: none;
    }

    p {
        font-size: 1.8em;
        font-family: Arial, Helvetica, sans-serif;
        margin: 1em;
    }

    .contact_button {
        border: solid .2em;
        border-color: white;
        color: white;
        padding: .5em;
        text-decoration: none;
    }

    .contact_button_wrapper {
        text-align: center;
    }

    #footer {
        padding-top: 1rem;
        padding-bottom: 1rem;
    }

    #footer_button {
        border: solid .2em;
        border-color: white;
        color: white;
        padding: .5em;
        text-decoration: none;
    }

    #footer_button_wrapper {
        padding: 1em;
    }

    /* ----- Home Section of Page ----- */
    #home_section {
        background-image: url("Media/Taylor_Leaning_with_Cello.jpg");
        background-color: rgb(175, 175, 175);
        background-blend-mode: multiply;
        background-position: top left;
        background-size: 100%;
        margin-top: 2.5rem;
        margin-bottom: -1.25rem;
        padding-bottom: 5rem;
        height: 80vh;
    }

    /* ----- Bio Section of Page ----- */
    #bio_section {
        background-image: url("Media/Taylor_with_Cello_Case.jpg");
        background-color: rgb(60, 60, 60);
        background-blend-mode: overlay;
        background-size: cover;
        background-position: left;
        background-repeat: no-repeat;
        margin-bottom: -1.25rem;
        padding-bottom: 4rem;
    }

    #bio_header_wrapper {
        display: grid;
        grid-template-columns: auto 70%;
        margin: 1em;
    }

    #bio_content_wrapper {
        display: grid;
        grid-template-columns: auto 70%
    }

    #mobile_bio_pic {
        display: grid;
        padding-bottom: 2em;
        margin-left: auto;
        margin-right: auto;
        width: 75%;
        visibility: hidden;
    }

    #bio_header {
        color: white;
    }

    .bio_information {
        color: white;
        margin-top: 0rem;
    }

    /* ----- Teaching Section of Page ----- */
    #teaching_section {
        background-image: url("Media/Taylor_in_Black_Chair.jpg");
        background-color: rgb(80, 80, 80);
        background-blend-mode: overlay;
        background-position: top right;
        background-size: cover;
        background-repeat: no-repeat;
        margin-bottom: -1.25rem;
        padding-bottom: 25rem;
    }

    #teaching_header_wrapper {
        display: grid;
        grid-template-columns: 60% auto;
    }

    .teaching_information {
        color: white;
        display: grid;
        grid-template-columns:60% auto;
    }

    /* ----- Contact Section of Page ----- */
    #contact_section {
        background-image: url("Media/Cello_Laying_Down.jpg");
        background-color: rgb(80, 80, 80);
        background-blend-mode: overlay;
        background-position: center bottom;
        background-size: cover;
        padding-bottom: 35rem;
        margin-bottom: -1.25rem;
    }

    .contact_information {
        color: white;
        text-align: center;
    }

    /* ----- Footer ----- */
    footer {
        background-color: black;
        color: white;
        margin-bottom: -1.25rem;
        text-align: center;
    }

}
/* ... */

